--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,6 +59,8 @@ en:
         full_name: Full name
         handle: Username
         password: Password
+      api_key:
+        oidc_api_key_role: OIDC API Key Role
     errors:
       messages:
         unpwn: has previously appeared in a data breach and should not be used
@@ -709,3 +711,9 @@ en:
       new_device: Register a new security device
       nickname: Nickname
       submit: Register device
+  oidc:
+    api_key_roles:
+      index:
+        api_key_roles: OIDC API Key Roles
+      show:
+        api_key_role_name: "API Key Role %{name}"
