--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -61,6 +61,8 @@ es:
         full_name: Nombre completo
         handle: Usuario
         password: Contraseña
+      api_key:
+        oidc_api_key_role:
     errors:
       messages:
         unpwn:
@@ -754,3 +756,9 @@ es:
       new_device:
       nickname:
       submit:
+  oidc:
+    api_key_roles:
+      index:
+        api_key_roles:
+      show:
+        api_key_role_name:
